[metadata]
name = cython_lint
version = 0.8.1
description = A linter for Cython files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/cython-lint
author = Marco Gorelli
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = cython_lint
install_requires =
    cython>=0.29.32
    pycodestyle
    tokenize-rt>=3.2.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    cython-lint = cython_lint:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
